// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svelte/Step renders correctly - active step 1`] = `
<div>
  <div
    class="gincko__step success step active"
    id="step__0"
  >
    <div
      class="gincko__step__fields"
    >
      
      <div
        id="field"
      >
        {"field":{"id":"Message","status":"initial","component":"Message","componentProps":{}},"path":"step.0.Message","isActive":true,"variables":{"var":"value"},"userInputs":{"test":"ok"},"customComponents":{}}
      </div>
      
    </div>
  </div>
</div>
`;

exports[`svelte/Step renders correctly - inactive step 1`] = `
<div>
  <div
    class="gincko__step success step "
    id="step__0"
  >
    <div
      class="gincko__step__fields"
    >
      
      <div
        id="field"
      >
        {"field":{"id":"Message","status":"initial","component":"Message","componentProps":{}},"path":"step.0.Message","isActive":false,"variables":{"var":"value"},"userInputs":{"test":"ok"},"customComponents":{}}
      </div>
      
      
      
    </div>
  </div>
</div>
`;
